# beyond_lm_eval

./: LICENSE  README.md  RESEARCH.md  TASK_FIXES.md  pyproject.toml  test_results.json
.github/workflows/: publish.yml  test.yml
docs/: configuration.md  getting_started.md  interpreting_results.md  tasks_causality.md  tasks_consistency.md  tasks_dynamics.md  tasks_geometry.md  tasks_interpretability.md  tasks_representation_engineering.md  tasks_steering.md  tasks_topology.md
examples/: demo.py
examples/recipes/: default_all.yaml  demo_recipe.yaml
paper/: main.tex  neurips_2025.sty  references.bib
src/blme/: __init__.py  cache.py  cli.py  core.py  registry.py  results.py  runner.py  utils.py
src/blme/assets/: categories.json
src/blme/models/: __init__.py  wrapper.py
src/blme/tasks/: __init__.py  base.py  benchmarks.py  common.py  config_loader.py  representation_engineering.py
src/blme/tasks/causality/: __init__.py  ablation.py  attention_knockout.py  circuit_quality.py  tracing.py
src/blme/tasks/configs/: defaults.yaml
src/blme/tasks/consistency/: __init__.py  calibration.py  contamination.py  contrastive.py  knowledge_capacity.py  logical.py  paraphrase.py
src/blme/tasks/dynamics/: __init__.py  coe.py  stability.py  trajectories.py
src/blme/tasks/gem/: __init__.py  alignment.py  editing.py  trajectories.py
src/blme/tasks/geometry/: __init__.py  alignment.py  categories.py  cka.py  collapse.py  consistency.py  correlation_dimension.py  hubness.py  information_geometry.py  intrinsic_dim.py  isotropy.py  lid.py  lipschitz.py  mahalanobis.py  matrix_entropy.py  mutual_info.py  perplexity.py  positional_decay.py  rsa.py  spectral.py  unembedding.py  utils.py
src/blme/tasks/interpretability/: __init__.py  attention.py  attention_graph.py  attribution.py  probing.py  (+8 more)
tests/: conftest.py  test_cache.py  test_common.py  test_completeness.py  test_config_loader.py  test_core.py  test_infrastructure.py  test_registry.py
tests/tasks/: test_causality.py  test_consistency.py  test_dynamics.py  test_geometry.py  test_interpretability.py  test_repe.py  test_steering.py  test_topology.py
(+7 files in other folders)
