[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blme"
version = "0.1.0"
description = "Beyond LM Eval — Intrinsic diagnostics for language models"
readme = "README.md"
authors = [
  { name = "BLME Contributors" },
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy",
    "tqdm",
    "scipy",
    "pyyaml",
    "datasets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
benchmarks = [
    "lm-eval",
]
probing = [
    "scikit-learn",
]
topology = [
    "ripser",
]
sae = [
    "sae-lens",
]
data = [
    # datasets is now a core dependency; kept for backwards compatibility
    "datasets",
]
logging = [
    "wandb",
]
all = [
    "lm-eval",
    "scikit-learn",
    "ripser",
    "sae-lens",
    "wandb",
    "datasets",
]

[project.urls]
"Homepage" = "https://github.com/dtsaras/beyond_lm_eval"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
blme = "blme.cli:main"
beyond-eval = "blme.cli:main"
